update pt-lab1intro comments and markdown

--- a/lab1/PT_Part1_Intro.ipynb
+++ b/lab1/PT_Part1_Intro.ipynb
@@ -44,12 +44,11 @@
         "id": "57knM8jrYZ2t"
       },
       "source": [
-        "# Lab 1: Intro to PyTorch and Music Generation with RNNs\n",
-        "\n",
-        "In this lab, you'll get exposure to using PyTorch and learn how it can be used for deep learning. Go through the code and run each cell. Along the way, you'll encounter several ***TODO*** blocks -- follow the instructions to fill them out before running those cells and continuing.\n",
         "\n",
         "\n",
-        "# Part 1: Intro to PyTorch\n",
+        "\n",
+        "\n",
+        "# Intro to PyTorch\n",
         "\n",
         "## 0.1 Install PyTorch\n",
         "\n",
@@ -160,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "tFeBBe1IouS3"
       },
@@ -175,14 +174,11 @@
       ],
       "source": [
         "### Defining higher-order Tensors ###\n",
-        "\n",
-        "'''TODO: Define a 2-d Tensor'''\n",
         "matrix = torch.tensor([[1, 2, 3], [4, 5, 6]])\n",
         "\n",
         "assert isinstance(matrix, torch.Tensor), \"matrix must be a torch Tensor object\"\n",
         "assert matrix.ndim == 2\n",
         "\n",
-        "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use torch.zeros to initialize a 4-d Tensor of zeros with size 10 x 3 x 256 x 256.\n",
         "#   You can think of this as 10 images where each image is RGB 256 x 256.\n",
         "images = torch.zeros(10, 3, 256, 256)\n",
@@ -289,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "PJnfzpWyYZ23",
         "scrolled": true
@@ -300,7 +296,6 @@
         "\n",
         "# Construct a simple computation function\n",
         "def func(a, b):\n",
-        "    '''TODO: Define the operation for c, d, e.'''\n",
         "    c = a + b\n",
         "    d = b - 1\n",
         "    e = c * d\n",
@@ -368,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "HutbJk-1kHPh"
       },
@@ -389,10 +384,10 @@
         "        self.bias = torch.nn.Parameter(torch.randn(num_outputs))\n",
         "\n",
         "    def forward(self, x):\n",
-        "        '''TODO: define the operation for z (hint: use torch.matmul).'''\n",
+        "        # implement the core operation of the layer to generate pre-activation outputs\n",
         "        z = torch.matmul(x, self.W) + self.bias\n",
         "\n",
-        "        '''TODO: define the operation for out (hint: use torch.sigmoid).'''\n",
+        "        # sigmoid activation function for output\n",
         "        y = torch.sigmoid(z)\n",
         "        return y\n"
       ]
@@ -449,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "7WXTpmoL6TDz"
       },
@@ -462,8 +457,7 @@
         "n_output_nodes = 3\n",
         "\n",
         "# Define the model\n",
-        "'''TODO: Use the Sequential API to define a neural network with a\n",
-        "    single linear (dense!) layer, followed by non-linearity to compute z'''\n",
+        "# Use the Sequential API to define a neural network with a single linear layer and Sigmoid activation\n",
         "model = nn.Sequential(nn.Linear(n_input_nodes, n_output_nodes), nn.Sigmoid())\n"
       ]
     },
@@ -515,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "K4aCflPVyViD"
       },
@@ -526,7 +520,7 @@
         "class LinearWithSigmoidActivation(nn.Module):\n",
         "    def __init__(self, num_inputs, num_outputs):\n",
         "        super(LinearWithSigmoidActivation, self).__init__()\n",
-        "        '''TODO: define a model with a single Linear layer and sigmoid activation.'''\n",
+        "        # define a model with a single Linear layer and sigmoid activation.\n",
         "        self.linear = nn.Linear(num_inputs, num_outputs)\n",
         "        self.activation = nn.Sigmoid()\n",
         "\n",
@@ -584,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "P7jzGX5D1xT5"
       },
@@ -597,10 +591,8 @@
         "        super(LinearButSometimesIdentity, self).__init__()\n",
         "        self.linear = nn.Linear(num_inputs, num_outputs)\n",
         "\n",
-        "    '''TODO: Implement the behavior where the network outputs the input, unchanged,\n",
-        "        under control of the isidentity argument.'''\n",
+        "    # network outputs the input, unchanged, under control of the isidentity argument.\n",
         "    def forward(self, inputs, isidentity=False):\n",
-        "      ''' TODO '''\n",
         "      if isidentity:\n",
         "          return inputs\n",
         "      else:\n",
@@ -618,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "NzC0mgbk5dp2"
       },
@@ -637,9 +629,8 @@
         "model = LinearButSometimesIdentity(num_inputs=2, num_outputs=3)\n",
         "x_input = torch.tensor([[1, 2.]])\n",
         "\n",
-        "'''TODO: pass the input into the model and call with and without the input identity option.'''\n",
+        "# pass the input into the model and call with and without the input identity option.\n",
         "out_with_linear = model(x_input, isidentity=False)\n",
-        "\n",
         "out_with_identity = model(x_input, isidentity=True)\n",
         "\n",
         "print(f\"input: {x_input}\")\n",
@@ -710,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -756,7 +747,7 @@
         "for i in range(500):\n",
         "    x = torch.tensor([x], requires_grad=True)\n",
         "\n",
-        "    # TODO: Compute the loss as the square of the difference between x and x_f\n",
+        "    # Compute the loss as the square of the difference between x and x_f\n",
         "    loss = (x - x_f) ** 2\n",
         "\n",
         "    # Backpropagate through the loss to compute gradients\n",
